--- a/styles/base.css
+++ b/styles/base.css
@@ -83,6 +83,7 @@
 
 html {
   font-size: 16px;
+  overflow-x: hidden;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
 }
